--- a/addons/fdm_mrp/i18n/fr_BE.po
+++ b/addons/fdm_mrp/i18n/fr_BE.po
@@ -72,7 +72,7 @@ msgstr "<strong>Sous-composant</strong>"
 msgid ""
 "This field allows you to detail the items of the nomenclature to be produced"
 " for the products to be delivered to the customer on the production sheet"
-msgstr "Cette case permet de détailler les articles de la nomenclatures à produire pour les articles à livrer au client sur la feuille de production"
+msgstr "Cette case permet de détailler les articles de la nomenclature à produire pour les articles à livrer au client sur la feuille de production"
 
 #. module: fdm_mrp
 #: model_terms:ir.ui.view,arch_db:fdm_mrp.report_production_document
