--- a/addons/fdm_mrp/i18n/fr_BE.po
+++ b/addons/fdm_mrp/i18n/fr_BE.po
@@ -21,10 +21,9 @@ msgid "Client"
 msgstr "Client"
 
 #. module: fdm_mrp
-#: model:ir.actions.report,name:fdm_mrp.action_report_production
 #: model:ir.actions.report,print_report_name:fdm_mrp.action_report_production
-msgid "Daily Production"
-msgstr "Production journalière"
+msgid "'Daily Production'"
+msgstr "'Production journalière'"
 
 #. module: fdm_mrp
 #: model_terms:ir.ui.view,arch_db:fdm_mrp.report_production_document
@@ -66,3 +65,33 @@ msgstr "<strong><i>Produits</i></strong>"
 #: model_terms:ir.ui.view,arch_db:fdm_mrp.report_production_document
 msgid "<strong>Subcomponent</strong>"
 msgstr "<strong>Sous-composant</strong>"
+
+#. module: fdm_mrp
+#: model:ir.model.fields,help:fdm_mrp.field_product_product__is_menu
+#: model:ir.model.fields,help:fdm_mrp.field_product_template__is_menu
+msgid ""
+"This field allows you to detail the items of the nomenclature to be produced"
+" for the products to be delivered to the customer on the production sheet"
+msgstr "Cette case permet de détailler les articles de la nomenclature à produire pour les articles à livrer au client sur la feuille de production"
+
+#. module: fdm_mrp
+#: model_terms:ir.ui.view,arch_db:fdm_mrp.report_production_document
+msgid "<strong>Details of the articles to be produced</strong>"
+msgstr "<strong>Détail des articles à produire</strong>"
+
+#. module: fdm_mrp
+#: model:ir.model.fields,field_description:fdm_mrp.field_product_product__is_menu
+#: model:ir.model.fields,field_description:fdm_mrp.field_product_template__is_menu
+msgid "Details of the articles to be produced"
+msgstr "Détail des articles à produire"
+
+#. module: fdm_mrp
+#: model_terms:ir.ui.view,arch_db:fdm_mrp.report_production_document
+msgid "<strong>Product</strong>"
+msgstr "<strong>Produit</strong>"
+
+#. module: fdm_mrp
+#: model_terms:ir.ui.view,arch_db:fdm_mrp.report_production_document
+msgid "Subcomponent"
+msgstr "Sous-composant"
+
